feat: add Navigation.js and Navigation.css in the header directory

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,14 @@
       href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap"
+      rel="stylesheet"
+    />
 
     <title>React App</title>
   </head>
