feat: modify index.html by including meta tag for https and http content

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap"
       rel="stylesheet"
     />
-
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>React App</title>
   </head>
   <body>
